--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "react-auth-kit": "^3.1.3",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   }
