--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "express-session": "^1.18.0",
     "nodemon": "^3.1.1",
     "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "react-auth-kit": "^3.1.3",
     "sequelize": "^6.37.3",
