--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "googleapis": "^137.1.0",
     "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-spotify": "^2.0.0",
     "react-auth-kit": "^3.1.3",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
